--- a/logstash-gelf.conf
+++ b/logstash-gelf.conf
@@ -1,13 +1,5 @@
 input {
-  tcp {
-    port => 5000
-    type => syslog
-  }
-
-  udp {
-    port => 5000
-    type => syslog
-  }
+  gelf {}
 }
 output {
   elasticsearch {
