--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -1,5 +1,13 @@
 input {
-  gelf {}
+  tcp {
+    port => 5000
+    type => syslog
+  }
+
+  udp {
+    port => 5000
+    type => syslog
+  }
 }
 output {
   elasticsearch {
