--- a/metricbeat/metricbeat.yml
+++ b/metricbeat/metricbeat.yml
@@ -48,7 +48,7 @@ metricbeat.modules:
   #cpu_ticks: false
 
   # EXPERIMENTAL: cgroups can be enabled for the process metricset.
-  #cgroups: false
+  cgroups: true
 
 #------------------------------- Apache Module -------------------------------
 #- module: apache
